Trade history & Open trades + css ranking

--- a/BinaryProjectGit/webcontent/header.html
+++ b/BinaryProjectGit/webcontent/header.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/materialdesignicons.min.css">
     <link rel="stylesheet" type="text/css" href="css/graph.css">
     <link rel="stylesheet" type="text/css" href="css/login.css">
     <link rel="stylesheet" type="text/css" href="css/base.css">
@@ -24,8 +25,11 @@
         <a class="navbar-brand navbar-nav" href="/" id="homeButtonHeader"><img class="logo-header" src="images/logoCobinix.png"></a>
         <div id="navbarTogglerDemo03" class="collapse navbar-collapse order-3">
             <ul class="navbar-nav my-2 my-lg-0 ml-auto">
-                <li class="nav_item depositLiHeader">
-                    <button class="nav-link buttonDeposit">Deposit</button>
+                <li class="nav-item depositLiHeader">
+                    <button class="nav-link buttonDeposit buttonDW">Deposit</button>
+                </li>
+                <li class="nav-item depositLiHeader">
+                    <button class="nav-link buttonWithdraw buttonDW">Withdraw</button>
                 </li>
                 <li class="nav-item tournamentsLiHeader">
                     <a class="nav-link" id="tournamentsLinkHeader"><img src="images/trophy.png" class="navImg" id="navTrophy"><span class="headerSpan">Tournaments</span></a>
